# 2020_PP_Dossier2

./: .gitignore  CMakeLists.txt
include/: bmp_file.h  donut_filter.h  mosaic_filter.h  utils.h
rapport/: rapport.tex
src/: bmp_file.c  donut_filter.c  mosaic_filter.c  utils.c
tests/: test_copy.c  test_create.c  test_donut.c  test_load.c  test_mosaic.c  test_reduction.c  test_tile.c
